# paper-etl-pipeline

backend/: .gitignore  pyproject.toml
backend/api/: main.py
backend/dags/: paper_etl_dag.py
backend/data/: clean_papers.csv  paper_embeddings.pkl  raw_papers_gabungan.json
backend/etl/: extractor.py  loader.py  transformer.py
backend/ml/: upload_vectors.py  vectorizer.py
backend/scripts/: debug_struktur.py  explore_unesa.py
frontend/: package-lock.json  package.json
frontend/src/: main.jsx
frontend/src/app/: App.jsx
frontend/src/components/graph/: GraphCanvas.jsx  GraphCanvasState.jsx  GraphLegend.jsx  GraphSection.jsx  GraphToolbar.jsx  GraphView.jsx
frontend/src/components/layout/: BrandMark.jsx  PageShell.jsx  TabNav.jsx  Topbar.jsx
frontend/src/components/paper/: KeywordChip.jsx  PaperCard.jsx  PaperDetailPanel.jsx  PaperMetaRow.jsx  SimilarityBar.jsx
frontend/src/components/search/: SearchBar.jsx  SearchEmptyState.jsx  SearchErrorState.jsx  SearchHero.jsx  SearchLoadingState.jsx  SearchNoResults.jsx  SearchResultsList.jsx  SearchResultsPanel.jsx  SearchSection.jsx
frontend/src/components/ui/: GradientButton.jsx  MonoBadge.jsx  SkeletonCard.jsx  Spinner.jsx  StateMessage.jsx
frontend/src/constants/: graph.js  tabs.js
frontend/src/hooks/: useElementSize.js  useGraphData.js  useSearchPapers.js
frontend/src/lib/: api.js  formatters.js
frontend/src/styles/: index.css
