[project]
name = "paper-etl-pipeline"
version = "0.1.0"
description = "Pipeline ETL E-Journal UNESA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4",
    "fastapi",
    "pandas",
    "python-dotenv",
    "requests",
    "sentence-transformers",
    "supabase",
    "torch",
    "uvicorn",
    "yake>=0.7.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
